--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,8 @@
 <!--link href="/media/style.css" rel="stylesheet" type="text/css" /-->
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-<!--script src="/js/EventSource.js" type="text/javascript"></script>
+<!--script src="/js/Application.js" type="text/javascript"></script>
+<script src="/js/EventSource.js" type="text/javascript"></script>
 <script src="/js/Hash.js" type="text/javascript"></script>
 <script src="/js/JSON.js" type="text/javascript"></script>
 <script src="/js/ServiceClient.js" type="text/javascript"></script>
@@ -20,18 +21,18 @@
   <h1><a href="/">multifarce</a></h1>
   <div id="user">
     <a id="avatar" href="http://en.gravatar.com/" title="Change your avatar at Gravatar">
-      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/3b3be63a4c2a43ab013787725dfce802?d=monsterid&s=28" width="28" height="28" />
+      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/3b3be63a4c2a43ab013787725dfce802?s=28&d=identicon&r=PG" width="28" height="28" />
     </a>
-    <span id="username" href="#">Not logged in</span>
+    <span id="username">Not logged in</span>
     <p id="actions">
-        <a id="action-1" href="#">Register</a> &ndash;
-        <a id="action-2" href="#">Log in</a>
+        <a id="action-1" href="#register">Register</a> &ndash;
+        <a id="action-2" href="#log-in">Log in</a>
     </p>
   </div>
 </div>
 <div id="body">
-  <h2>Home</h2>
-  <div id="content">
+  <div class="page" id="home">
+    <h2>Home</h2>
     <div class="info">
       <h3>Welcome!</h3>
       <p>Welcome to multifarce, the text adventure with an infinite number of
@@ -45,7 +46,7 @@
       story!</p>
     </div>
     <div id="current-frame">
-      <h3>Initializing</h3>
+      <h3>Initializing...</h3>
       <!--p class="image"></p-->
       <p class="text">Please wait while multifarce is initializing...</p>
     </div>
@@ -53,19 +54,31 @@
       <h3>What to do?</h3>
       <p><input id="action" name="action" type="text" /> <button id="action-go">Do it!</button></p>
     </div>
-    <div id="log">
-      <p class="frame">Entering <strong>The Beginning</strong>:<br />
-      <em>Once upon a time bla bla bla...</em></p>
-      <p class="result">You do stuff.</p>
-      <p class="command">&gt; do stuff</p>
+    <div id="log"></div>
+  </div>
+  <div class="page" id="register">
+    <h2>Register</h2>
+    <div class="info">
+      <h3>Hold on!</h3>
+      <p>Do you have a Google Account? If you do, you can log in with your
+      Google Account and then link it to multifarce. Don't worry, it's perfectly
+      safe, Google only tells multifarce if you logged in OK and what your
+      Google e-mail is. By linking your account to multifarce your password will
+      be kept safe with Google.</p>
     </div>
   </div>
+  <div class="page" id="not-found"> 
+    <h2>Page not found</h2> 
+    <h3>Oh noes!</h3>
+    <p>The path <strong id="not-found-path">.</strong> don't lead nowhere! Try
+    hitting <em>Back</em> in your browser or going back to
+    <a href="#">the start</a>.</p> 
+  </div> 
 </div>
-<p id="footer">Copyright &copy; <a href="http://blixt.org/">Andreas Blixt</a> {% now "Y" %}</p>
-
+<p id="footer">Open source: <a href="http://code.google.com/p/multifarce/">Google Code project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas Blixt</a> {% now "Y" %}</p>
 <script type="text/javascript">
 $(function () {
-    $('<a class="close" href="#">&times;</a>').appendTo('div.info h3').click(function () {
+    $('<a class="close" href="#" title="Hide information">&times;</a>').appendTo('div.info h3').click(function () {
         $(this).closest('div.info').fadeOut(300);
         return false;
     });
