--- a/app/app.html
+++ b/app/app.html
@@ -4,51 +4,45 @@
 <head>
 <title>multifarce - the text adventure with an infinite number of endings!</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!--link href="/media/style.css" rel="stylesheet" type="text/css" /-->
+<meta name="viewport" content="width=650, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-<!--script src="/js/Application.js" type="text/javascript"></script>
-<script src="/js/EventSource.js" type="text/javascript"></script>
-<script src="/js/Hash.js" type="text/javascript"></script>
-<script src="/js/JSON.js" type="text/javascript"></script>
-<script src="/js/ServiceClient.js" type="text/javascript"></script>
-<script src="/js/jquery.hash.js" type="text/javascript"></script>
-<script src="/js/multifarce.js" type="text/javascript"></script-->
 <script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
 </head>
-<body>
+<body class="scheme-3">
 <div id="header">
-  <h1><a href="/">multifarce</a></h1>
+  <h1><a href="#">multifarce</a></h1>
   <div id="user">
     <a id="avatar" href="http://en.gravatar.com/" title="Change your avatar at Gravatar">
-      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/3b3be63a4c2a43ab013787725dfce802?s=28&d=identicon&r=PG" width="28" height="28" />
+      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&d=identicon&r=PG" width="28" height="28" />
     </a>
     <span id="username">Not logged in</span>
     <p id="actions">
-        <a id="action-1" href="#register">Register</a> &ndash;
-        <a id="action-2" href="#log-in">Log in</a>
+      <a id="action-1" href="#register">Register</a> &ndash;
+      <a id="action-2" href="#log-in">Log in</a>
     </p>
   </div>
 </div>
 <div id="body">
+  <h2 id="page-name">Hello World!</h2>
+  <div id="notifications"></div>
   <div class="page" id="home">
-    <h2>Home</h2>
-    <div class="info">
-      <h3>Welcome!</h3>
-      <p>Welcome to multifarce, the text adventure with an infinite number of
-      endings (well, that's the idea anyways)! You can start playing it
-      immediately below, or you can <a href="#register">register</a> to be able
-      to continue the story!</p>
-      <p>It works like this. The game always starts on the <em>The Beginning</em>
-      <strong>frame</strong>. Now you're able to enter any <strong>command</strong>
-      you can think of. If the command does not exist, you have the ability to
-      create it (and select/create the frame it will lead to) and continue the
-      story!</p>
-    </div>
     <div id="current-frame">
-      <h3>Initializing...</h3>
+      <h3>Hello World!</h3>
       <!--p class="image"></p-->
-      <p class="text">Please wait while multifarce is initializing...</p>
+      <div class="text">
+        <p>Welcome to <strong>multifarce</strong>, the text adventure with an
+        infinite number of endings (well, that's the idea anyways)! You can
+        start playing it immediately below, or you can register to be able to
+        continue the story!</p>
+        <p>It works like this. The game always starts on the
+        <em>The Beginning</em> <strong>frame</strong>. Now you're able to enter
+        any <strong>command</strong> you can think of. If the command does not
+        exist, you have the ability to create it (and select/create the frame it
+        will lead to) and continue the story!</p>
+        <p>To begin your adventure, type <strong>start</strong>. You can restart
+        the game at any time by typing <strong>reset</strong>.</p>
+      </div>
     </div>
     <div id="input">
       <h3>What to do?</h3>
@@ -57,7 +51,6 @@
     <div id="log"></div>
   </div>
   <div class="page" id="register">
-    <h2>Register</h2>
     <div class="info">
       <h3>Hold on!</h3>
       <p>Do you have a Google Account? If you do, you can log in with your
@@ -68,21 +61,30 @@
     </div>
   </div>
   <div class="page" id="not-found"> 
-    <h2>Page not found</h2> 
     <h3>Oh noes!</h3>
     <p>The path <strong id="not-found-path">.</strong> don't lead nowhere! Try
     hitting <em>Back</em> in your browser or going back to
     <a href="#">the start</a>.</p> 
   </div> 
+  <div class="page" id="new-command"> 
+    <h3>Creating a new command</h3>
+    <p><label for="new-command-frame">On frame</label> <select id="new-command-frame"></select></p>
+    <p><label for="new-command-1">Command #1</label> <input id="new-command-1" type="text" /></p>
+    <p><label for="new-command-2">Command #2</label> <input id="new-command-2" type="text" /></p>
+    <p><label for="new-command-3">Command #3</label> <input id="new-command-3" type="text" /></p>
+    <p><label for="new-command-4">Command #4</label> <input id="new-command-4" type="text" /></p>
+    <p><label for="new-command-5">Command #5</label> <input id="new-command-5" type="text" /></p>
+    <p><label for="new-command-text">Text</label> <input id="new-command-text" type="text" /></p>
+    <p><label for="new-command-go-to-frame">Go to frame</label> <select id="new-command-go-to-frame"></select></p>
+    <p><button id="new-command-create">Create it!</button></p>
+  </div> 
+  <div class="page" id="new-frame"> 
+    <h3>Creating a new frame</h3>
+    <p><label for="new-frame-title">Title</label> <input id="new-frame-title" type="text" /></p>
+    <p><label for="new-frame-text">Text</label> <textarea id="new-frame-text" cols="50" rows="5"></textarea></p>
+    <p><button id="new-frame-create">Create it!</button></p>
+  </div> 
 </div>
 <p id="footer">Open source: <a href="http://code.google.com/p/multifarce/">Google Code project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas Blixt</a> {% now "Y" %}</p>
-<script type="text/javascript">
-$(function () {
-    $('<a class="close" href="#" title="Hide information">&times;</a>').appendTo('div.info h3').click(function () {
-        $(this).closest('div.info').fadeOut(300);
-        return false;
-    });
-});
-</script>
 </body>
 </html>
