Added a simple console application to show how the API might be used by an external client. Design improvements to web interface. Added get_first_frame command to controller. Right now it always fetches the frame with id 1. User data now always returns the MD5 hash of the e-mail address (for Gravatar.) JavaScript library now has preliminary support for users.

--- a/app/app.html
+++ b/app/app.html
@@ -17,10 +17,10 @@
       <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&d=identicon&r=PG" width="28" height="28" />
     </a>
     <span id="username">Not logged in</span>
-    <p id="actions">
-      <a id="action-1" href="#register">Register</a> &ndash;
-      <a id="action-2" href="#log-in">Log in</a>
-    </p>
+    <ul id="actions">
+      <li id="action-1"><a href="#register">Register</a></li>
+      <li id="action-2"><a href="#log-in">Log in</a></li>
+    </ul>
   </div>
 </div>
 <div id="body">
@@ -46,7 +46,10 @@
     </div>
     <div id="input">
       <h3>What to do?</h3>
-      <p><input id="action" name="action" type="text" /> <button id="action-go">Do it!</button></p>
+      <p>
+        <input id="action" name="action" type="text" />
+        <button id="action-go">Do it!</button>
+      </p>
     </div>
     <div id="log"></div>
   </div>
