--- a/app/app.html
+++ b/app/app.html
@@ -4,7 +4,7 @@
 <head>
 <title>multifarce - the text adventure with an infinite number of endings!</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=650, user-scalable=yes" />
+<meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
 <script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
@@ -14,7 +14,7 @@
   <h1><a href="#">multifarce</a></h1>
   <div id="user">
     <a id="avatar" href="http://en.gravatar.com/" title="Change your avatar at Gravatar">
-      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&d=identicon&r=PG" width="28" height="28" />
+      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&amp;d=identicon&amp;r=PG" width="28" height="28" />
     </a>
     <span id="username">Not logged in</span>
     <ul id="actions">
@@ -47,21 +47,41 @@
     <div id="input">
       <h3>What to do?</h3>
       <p>
-        <input id="action" name="action" type="text" />
+        <input class="text" id="action" type="text" />
         <button id="action-go">Do it!</button>
       </p>
     </div>
     <div id="log"></div>
   </div>
   <div class="page" id="register">
-    <div class="info">
-      <h3>Hold on!</h3>
+    <div class="info google-logged-out">
+      <h3>Woah, hold on a second!</h3>
       <p>Do you have a Google Account? If you do, you can log in with your
       Google Account and then link it to multifarce. Don't worry, it's perfectly
       safe, Google only tells multifarce if you logged in OK and what your
       Google e-mail is. By linking your account to multifarce your password will
       be kept safe with Google.</p>
+      <p><a class="google-accounts" href="#register">Yup! Take me to the Google log
+      in page!</a></p>
     </div>
+  </div>
+  <div class="page" id="log-in">
+    <div class="info google-logged-out">
+      <h3>Dude. Do you Google?</h3>
+      <p>Have you linked a Google Account to multifarce?</p>
+      <p><a class="google-accounts" href="#">Yup! Take me to the Google log in
+      page!</a></p>
+    </div>
+    <h3>Ye olde login</h3>
+    <p class="field">
+      <label for="log-in-username">Username</label>
+      <input class="text" id="log-in-username" type="text" />
+    </p>
+    <p class="field">
+      <label for="log-in-password">Password</label>
+      <input class="password" id="log-in-password" type="password" />
+    </p>
+    <p class="field"><button id="log-in-go">Log me in, Scotty!</button></p>
   </div>
   <div class="page" id="not-found"> 
     <h3>Oh noes!</h3>
@@ -71,23 +91,65 @@
   </div> 
   <div class="page" id="new-command"> 
     <h3>Creating a new command</h3>
-    <p><label for="new-command-frame">On frame</label> <select id="new-command-frame"></select></p>
-    <p><label for="new-command-1">Command #1</label> <input id="new-command-1" type="text" /></p>
-    <p><label for="new-command-2">Command #2</label> <input id="new-command-2" type="text" /></p>
-    <p><label for="new-command-3">Command #3</label> <input id="new-command-3" type="text" /></p>
-    <p><label for="new-command-4">Command #4</label> <input id="new-command-4" type="text" /></p>
-    <p><label for="new-command-5">Command #5</label> <input id="new-command-5" type="text" /></p>
-    <p><label for="new-command-text">Text</label> <input id="new-command-text" type="text" /></p>
-    <p><label for="new-command-go-to-frame">Go to frame</label> <select id="new-command-go-to-frame"></select></p>
-    <p><button id="new-command-create">Create it!</button></p>
+    <p class="field">
+      <label for="new-command-frame">On frame</label>
+      <select id="new-command-frame">
+        <option>Loading frames!</option>
+      </select>
+    </p>
+    <p class="field">
+      <label for="new-command-1">Command #1</label>
+      <input class="text" id="new-command-1" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-2">Command #2</label>
+      <input class="text" id="new-command-2" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-3">Command #3</label>
+      <input class="text" id="new-command-3" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-4">Command #4</label>
+      <input class="text" id="new-command-4" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-5">Command #5</label>
+      <input class="text" id="new-command-5" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-text">Text</label>
+      <input class="text" id="new-command-text" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-command-go-to-frame">Go to frame</label>
+      <select id="new-command-go-to-frame">
+        <option>Loading frames!</option>
+      </select>
+    </p>
+    <p class="field"><button id="new-command-create">Create it!</button></p>
   </div> 
   <div class="page" id="new-frame"> 
     <h3>Creating a new frame</h3>
-    <p><label for="new-frame-title">Title</label> <input id="new-frame-title" type="text" /></p>
-    <p><label for="new-frame-text">Text</label> <textarea id="new-frame-text" cols="50" rows="5"></textarea></p>
-    <p><button id="new-frame-create">Create it!</button></p>
+    <p class="field">
+      <label for="new-frame-title">Title</label>
+      <input class="text" id="new-frame-title" type="text" />
+    </p>
+    <p class="field">
+      <label for="new-frame-text">Text</label>
+      <span>You can use <code>*text*</code> for <strong>text you want to stand
+      out</strong> and <code>_text_</code> for <em>text you want to
+      emphasize</em>.</span>
+      <textarea id="new-frame-text" cols="50" rows="10"></textarea>
+    </p>
+    <p class="field"><button id="new-frame-create">Create it!</button></p>
   </div> 
 </div>
-<p id="footer">Open source: <a href="http://code.google.com/p/multifarce/">Google Code project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas Blixt</a> {% now "Y" %}</p>
+<div id="footer">
+  <p>Open source: <a href="http://code.google.com/p/multifarce/">Google Code
+  project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas
+  Blixt</a> {% now "Y" %}</p>
+</div>
+</div>
 </body>
 </html>
