--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
 <head>
 <title>multifarce - the text adventure with an infinite number of endings!</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="verify-v1" content="nv46/NAXAGWr+0MkCvrFxWv/23Vj/dhrLJ9Bw69nZaM=" />
 <meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
@@ -54,23 +55,61 @@
     <div id="log"></div>
   </div>
   <div class="page" id="register">
-    <div class="info google-logged-out">
-      <h3>Woah, hold on a second!</h3>
-      <p>Do you have a Google Account? If you do, you can log in with your
-      Google Account and then link it to multifarce. Don't worry, it's perfectly
-      safe, Google only tells multifarce if you logged in OK and what your
-      Google e-mail is. By linking your account to multifarce your password will
-      be kept safe with Google.</p>
-      <p><a class="google-accounts" href="#register">Yup! Take me to the Google log
-      in page!</a></p>
+    <div class="multifarce">
+      <div class="info">
+        <h3>Heeey, wait a minute!</h3>
+        <p>You're already logged in to multifarce! You'll need to
+        <a href="#log-out">log out</a> to be able to register!</p>
+      </div>
+    </div>
+    <div class="google not-multifarce">
+      <div class="info">
+        <h3>Stay awhile and listen!</h3>
+        <p>You're ready to link your Google account with multifarce! Just fill
+        in the fields below and hit <em>Register</em>!</p>
+        <p>Since passwords are handled by Google, you will not be able to enter
+        a password for multifarce.</p>
+        <p>If you don't want to link your Google account with multifarce, you
+        will need to <a class="google-accounts" href="#register">log out from
+        Google Accounts</a> before registering.</p>
+      </div>
+    </div>
+    <div class="not-google not-multifarce">
+      <div class="info">
+        <h3>Woah, hold on a second!</h3>
+        <p>Do you have a Google Account? If you do, you can log in with your
+        Google Account and then link it to multifarce. Don't worry, it's
+        perfectly safe, Google only tells multifarce if you logged in OK and
+        what your Google e-mail is. By linking your account to multifarce your
+        password will be kept safe with Google.</p>
+        <p><a class="google-accounts" href="#register">Yup! Take me to the
+        Google log in page!</a></p>
+      </div>
     </div>
   </div>
   <div class="page" id="log-in">
-    <div class="info google-logged-out">
-      <h3>Dude. Do you Google?</h3>
-      <p>Have you linked a Google Account to multifarce?</p>
-      <p><a class="google-accounts" href="#">Yup! Take me to the Google log in
-      page!</a></p>
+    <div class="multifarce">
+      <div class="info">
+        <h3>Heeey, wait a minute!</h3>
+        <p>You're already logged in to multifarce! You'll need to
+        <a href="#log-out">log out</a> first before you can log in again!</p>
+      </div>
+    </div>
+    <div class="not-google not-multifarce">
+      <div class="info">
+        <h3>Psssst! Do you Google?</h3>
+        <p>Have you linked a Google Account to multifarce?</p>
+        <p><a class="google-accounts" href="#">Yup! Take me to the Google log in
+        page!</a></p>
+      </div>
+    </div>
+    <div class="google not-multifarce">
+      <div class="info">
+        <h3>Ahoy there, Googler!</h3>
+        <p>So you're logged in with your Google account, but you haven't linked
+        it to multifarce yet! Well, we'll sort that out in no time! Head on over
+        to <a href="#register">the registration page</a>!</p>
+      </div>
     </div>
     <h3>Ye olde login</h3>
     <p class="field">
