--- a/app/app.html
+++ b/app/app.html
@@ -4,7 +4,6 @@
 <head>
 <title>multifarce - the text adventure with an infinite number of endings!</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="verify-v1" content="nv46/NAXAGWr+0MkCvrFxWv/23Vj/dhrLJ9Bw69nZaM=" />
 <meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
@@ -17,7 +16,7 @@
     <a id="avatar" href="http://en.gravatar.com/" title="Change your avatar at Gravatar">
       <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&amp;d=identicon&amp;r=PG" width="28" height="28" />
     </a>
-    <span id="username">Not logged in</span>
+    <span id="username">...</span>
     <ul id="actions">
       <li id="action-1"><a href="#register">Register</a></li>
       <li id="action-2"><a href="#log-in">Log in</a></li>
@@ -27,6 +26,7 @@
 <div id="body">
   <h2 id="page-name">Hello World!</h2>
   <div id="notifications"></div>
+
   <div class="page" id="home">
     <div id="current-frame">
       <h3>Hello World!</h3>
@@ -48,12 +48,13 @@
     <div id="input">
       <h3>What to do?</h3>
       <p>
-        <input class="text" id="action" type="text" />
+        <input class="text" id="action" type="text" value="start" />
         <button id="action-go">Do it!</button>
       </p>
     </div>
     <div id="log"></div>
   </div>
+
   <div class="page" id="register">
     <div class="multifarce">
       <div class="info">
@@ -66,12 +67,21 @@
       <div class="info">
         <h3>Stay awhile and listen!</h3>
         <p>You're ready to link your Google account with multifarce! Just fill
-        in the fields below and hit <em>Register</em>!</p>
+        in the fields below and hit <em>Sign me up!</em></p>
         <p>Since passwords are handled by Google, you will not be able to enter
         a password for multifarce.</p>
-        <p>If you don't want to link your Google account with multifarce, you
-        will need to <a class="google-accounts" href="#register">log out from
-        Google Accounts</a> before registering.</p>
+        <p class="head">So, do you want to link your Google account with
+        multifarce?</p>
+        <p>
+            <label>
+                <input id="register-use-google-yes" name="register-use-google" type="radio" />
+                Yup!
+            </label>
+            <label>
+                <input id="register-use-google-no" name="register-use-google" type="radio" />
+                Nah.
+            </label>
+        </p>
       </div>
     </div>
     <div class="not-google not-multifarce">
@@ -86,7 +96,36 @@
         Google log in page!</a></p>
       </div>
     </div>
+    <h3>Your desired account information</h3>
+    <p class="field">
+      <label for="register-username">Username</label>
+      <input class="text" id="register-username" maxlength="20" type="text" />
+    </p>
+    <p class="field">
+      <label for="register-name">Display name</label>
+      <input class="text" id="register-name" maxlength="20" type="text" />
+    </p>
+    <p class="field">
+      <label for="register-email">E-mail address</label>
+      <input class="text" id="register-email" type="text" />
+    </p>
+    <p class="field">
+      <span><strong>Note:</strong> Your e-mail is currently only used for
+      <a href="http://en.gravatar.com/">Gravatar support</a>. It will never be
+      shared with other parties, nor will it be sent unsolicited e-mails.
+      </span>
+    </p>
+    <p class="field">
+      <label for="register-password">Password</label>
+      <input class="password" id="register-password" type="password" />
+    </p>
+    <p class="field">
+      <label for="register-password-2">Repeat password</label>
+      <input class="password" id="register-password-2" type="password" />
+    </p>
+    <p class="field"><button id="register-go">Sign me up!</button></p>
   </div>
+
   <div class="page" id="log-in">
     <div class="multifarce">
       <div class="info">
@@ -98,9 +137,11 @@
     <div class="not-google not-multifarce">
       <div class="info">
         <h3>Psssst! Do you Google?</h3>
-        <p>Have you linked a Google Account to multifarce?</p>
-        <p><a class="google-accounts" href="#">Yup! Take me to the Google log in
+        <p>Have you linked a Google Account to multifarce?<br />&mdash;
+        <a class="google-accounts" href="#">Yup! Take me to the Google log in
         page!</a></p>
+        <p>If you want to register, you should head on over to
+        <a href="#register">the registration page</a>!</p>
       </div>
     </div>
     <div class="google not-multifarce">
@@ -122,12 +163,29 @@
     </p>
     <p class="field"><button id="log-in-go">Log me in, Scotty!</button></p>
   </div>
+
+  <div class="page" id="log-out">
+    <div class="multifarce">
+      <div class="info">
+        <h3>Logging out!</h3>
+        <p>You are being logged out!</p>
+      </div>
+    </div>
+    <div class="not-multifarce">
+      <div class="info">
+        <h3>Logged out!</h3>
+        <p>You are logged out!</p>
+      </div>
+    </div>
+  </div>
+
   <div class="page" id="not-found"> 
     <h3>Oh noes!</h3>
     <p>The path <strong id="not-found-path">.</strong> don't lead nowhere! Try
     hitting <em>Back</em> in your browser or going back to
     <a href="#">the start</a>.</p> 
   </div> 
+
   <div class="page" id="new-command"> 
     <h3>Creating a new command</h3>
     <p class="field">
@@ -168,6 +226,7 @@
     </p>
     <p class="field"><button id="new-command-create">Create it!</button></p>
   </div> 
+
   <div class="page" id="new-frame"> 
     <h3>Creating a new frame</h3>
     <p class="field">
