--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-<script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
+<script src="/js/multifarce.js?{{ version }}" type="text/javascript"></script>
+<!--script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script-->
 </head>
 <body class="scheme-3">
 <div id="header">
@@ -27,7 +28,7 @@
   <h2 id="page-name">Hello World!</h2>
   <div id="notifications"></div>
 
-  <div class="page" id="home">
+  <div class="page" id="home-page">
     <div id="current-frame">
       <h3>Hello World!</h3>
       <!--p class="image"></p-->
@@ -48,14 +49,14 @@
     <div id="input">
       <h3>What to do?</h3>
       <p>
-        <input class="text" id="action" type="text" value="start" />
+        <input class="text" id="action" type="text" />
         <button id="action-go">Do it!</button>
       </p>
     </div>
     <div id="log"></div>
   </div>
 
-  <div class="page" id="register">
+  <div class="page" id="register-page">
     <div class="multifarce">
       <div class="info">
         <h3>Heeey, wait a minute!</h3>
@@ -126,7 +127,7 @@
     <p class="field"><button id="register-go">Sign me up!</button></p>
   </div>
 
-  <div class="page" id="log-in">
+  <div class="page" id="log-in-page">
     <div class="multifarce">
       <div class="info">
         <h3>Heeey, wait a minute!</h3>
@@ -164,7 +165,7 @@
     <p class="field"><button id="log-in-go">Log me in, Scotty!</button></p>
   </div>
 
-  <div class="page" id="log-out">
+  <div class="page" id="log-out-page">
     <div class="multifarce">
       <div class="info">
         <h3>Logging out!</h3>
@@ -179,14 +180,14 @@
     </div>
   </div>
 
-  <div class="page" id="not-found"> 
+  <div class="page" id="not-found-page"> 
     <h3>Oh noes!</h3>
     <p>The path <strong id="not-found-path">.</strong> don't lead nowhere! Try
     hitting <em>Back</em> in your browser or going back to
     <a href="#">the start</a>.</p> 
   </div> 
 
-  <div class="page" id="new-command"> 
+  <div class="page" id="new-command-page"> 
     <h3>Creating a new command</h3>
     <p class="field">
       <label for="new-command-frame">On frame</label>
@@ -224,10 +225,10 @@
         <option>Loading frames!</option>
       </select>
     </p>
-    <p class="field"><button id="new-command-create">Create it!</button></p>
+    <p class="field"><button id="new-command-go">Create it!</button></p>
   </div> 
 
-  <div class="page" id="new-frame"> 
+  <div class="page" id="new-frame-page"> 
     <h3>Creating a new frame</h3>
     <p class="field">
       <label for="new-frame-title">Title</label>
@@ -240,7 +241,7 @@
       emphasize</em>.</span>
       <textarea id="new-frame-text" cols="50" rows="10"></textarea>
     </p>
-    <p class="field"><button id="new-frame-create">Create it!</button></p>
+    <p class="field"><button id="new-frame-go">Create it!</button></p>
   </div> 
 </div>
 <div id="footer">
@@ -249,5 +250,14 @@
   Blixt</a> {% now "Y" %}</p>
 </div>
 </div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-2030892-8");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </body>
 </html>
