--- a/app/app.html
+++ b/app/app.html
@@ -7,8 +7,7 @@
 <meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-<script src="/js/multifarce.js?{{ version }}" type="text/javascript"></script>
-<!--script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script-->
+<script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
 </head>
 <body class="scheme-3">
 <div id="header">
@@ -70,16 +69,16 @@
         <p>You're ready to link your Google account with multifarce! Just fill
         in the fields below and hit <em>Sign me up!</em></p>
         <p>Since passwords are handled by Google, you will not be able to enter
-        a password for multifarce.</p>
+        a password for multifarce if you link your account.</p>
         <p class="head">So, do you want to link your Google account with
         multifarce?</p>
         <p>
             <label>
-                <input id="register-use-google-yes" name="register-use-google" type="radio" />
+                <input id="register-use-google-yes" name="register-use-google" type="radio" value="yes" />
                 Yup!
             </label>
             <label>
-                <input id="register-use-google-no" name="register-use-google" type="radio" />
+                <input checked="checked" id="register-use-google-no" name="register-use-google" type="radio" value="no" />
                 Nah.
             </label>
         </p>
@@ -176,6 +175,7 @@
       <div class="info">
         <h3>Logged out!</h3>
         <p>You are logged out!</p>
+        <p><a href="#">Okay, go back to the home page!</a></p>
       </div>
     </div>
   </div>
@@ -248,7 +248,6 @@
   <p>Open source: <a href="http://code.google.com/p/multifarce/">Google Code
   project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas
   Blixt</a> {% now "Y" %}</p>
-</div>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
