--- a/app/app.html
+++ b/app/app.html
@@ -9,7 +9,7 @@
 <script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
 <script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
 </head>
-<body class="scheme-3">
+<body class="dom-loading scheme-3">
 <div id="header">
   <h1><a href="#">multifarce</a></h1>
   <div id="user">
