Removed usernames. E-mail is now used for logging in instead. Users are now identified in code by numeric ids, and to other users by their display names.

--- a/app/app.html
+++ b/app/app.html
@@ -107,8 +107,8 @@
     </div>
     <h3>Ye olde login</h3>
     <p class="field">
-      <label for="log-in-username">Username</label>
-      <input class="text" id="log-in-username" type="text" />
+      <label for="log-in-email">E-mail address</label>
+      <input class="text" id="log-in-email" type="text" />
     </p>
     <p class="field">
       <label for="log-in-password">Password</label>
@@ -261,22 +261,19 @@
     </div>
     <h3>Your desired account information</h3>
     <p class="field">
-      <label for="register-username">Username</label>
-      <input class="text" id="register-username" maxlength="20" type="text" />
-    </p>
-    <p class="field">
-      <label for="register-name">Display name</label>
-      <input class="text" id="register-name" maxlength="20" type="text" />
-    </p>
-    <p class="field">
       <label for="register-email">E-mail address</label>
       <input class="text" id="register-email" type="text" />
     </p>
     <p class="field">
       <span><strong>Note:</strong> Your e-mail is currently only used for
-      <a href="http://en.gravatar.com/">Gravatar support</a>. It will never be
-      shared with other parties, nor will it be sent unsolicited e-mails.
+      logging in and for <a href="http://en.gravatar.com/">Gravatar support</a>.
+      It will never be shared with other parties, nor will it be sent
+      unsolicited e-mails.
       </span>
+    </p>
+    <p class="field">
+      <label for="register-name">Display name</label>
+      <input class="text" id="register-name" maxlength="20" type="text" />
     </p>
     <p class="field">
       <label for="register-password">Password</label>
