--- a/app/app.html
+++ b/app/app.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=660, user-scalable=yes" />
 <link href="/media/style.min.css?{{ version }}" rel="stylesheet" type="text/css" />
-<script src="/js/jquery-1.3.2.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
 <script src="/js/multifarce.min.js?{{ version }}" type="text/javascript"></script>
 </head>
 <body class="dom-loading scheme-3">
