Changed the magical commands start and reset to /start and /reset to avoid collisions with real commands.

--- a/app/app.html
+++ b/app/app.html
@@ -39,10 +39,10 @@
         <p>It works like this. The game always starts on the
         <em>The Beginning</em> <strong>frame</strong>. Now you're able to enter
         any <strong>command</strong> you can think of. If the command does not
-        exist, you have the ability to create it (and select/create the frame it
-        will lead to) and continue the story!</p>
-        <p>To begin your adventure, type <strong>start</strong>. You can restart
-        the game at any time by typing <strong>reset</strong>.</p>
+        exist, you have the ability to create it (and select/create the frame
+        it will lead to) and continue the story!</p>
+        <p>To begin your adventure, type <strong>/start</strong>. You can
+        restart the game at any time by typing <strong>/reset</strong>.</p>
       </div>
     </div>
     <div id="input">
