Changed project link from Google Code to GitHub.

--- a/app/app.html
+++ b/app/app.html
@@ -287,9 +287,9 @@
   </div>
 </div>
 <div id="footer">
-  <p>Open source: <a href="http://code.google.com/p/multifarce/">Google Code
-  project page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas
-  Blixt</a> {% now "Y" %}</p>
+  <p>Open source: <a href="http://github.com/blixt/multifarce/">GitHub project
+  page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas Blixt
+  </a> {% now "Y" %}</p>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
