Fixed rogue space in link.

--- a/app/app.html
+++ b/app/app.html
@@ -288,8 +288,8 @@
 </div>
 <div id="footer">
   <p>Open source: <a href="http://github.com/blixt/multifarce/">GitHub project
-  page</a> &mdash; Copyright &copy; <a href="http://blixt.org/">Andreas Blixt
-  </a> {% now "Y" %}</p>
+  page</a> &mdash; Copyright &copy;
+  <a href="http://blixt.org/">Andreas Blixt</a> {% now "Y" %}</p>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
