Added new Frame page for showing details about a single frame.

--- a/app/app.html
+++ b/app/app.html
@@ -79,6 +79,25 @@
     </ul>
   </div>
 
+  <div class="page" id="frame-page">
+    <h3 id="frame-title">Current Frame</h3>
+    <div class="text" id="frame-text">
+      <p>This is the current frame.</p>
+    </div>
+    <h3>Commands leading here</h3>
+    <ul class="object-list" id="frame-commands-in">
+      <li>Please stand by...</li>
+    </ul>
+    <h3>Commands leading from here</h3>
+    <ul class="object-list" id="frame-commands-out">
+      <li>Please stand by...</li>
+    </ul>
+    <h3>Most commonly entered commands</h3>
+    <ul class="object-list" id="frame-top-commands">
+      <li>Please stand by...</li>
+    </ul>
+  </div>
+
   <div class="page" id="log-in-page">
     <div class="multifarce">
       <div class="info">
