Improved frame page.

--- a/app/app.html
+++ b/app/app.html
@@ -88,11 +88,11 @@
     <ul class="object-list" id="frame-commands-in">
       <li>Please stand by...</li>
     </ul>
-    <h3>Commands leading from here</h3>
+    <h3>Commands on this frame</h3>
     <ul class="object-list" id="frame-commands-out">
       <li>Please stand by...</li>
     </ul>
-    <h3>Most commonly entered commands</h3>
+    <h3>Most commonly entered commands for this frame</h3>
     <ul class="object-list" id="frame-top-commands">
       <li>Please stand by...</li>
     </ul>
