Added a new profile page that can be used to update the e-mail address and display name.

--- a/app/app.html
+++ b/app/app.html
@@ -238,6 +238,26 @@
     <a href="#">the start</a>.</p>
   </div>
 
+  <div class="page" id="profile-page">
+    <h3>Your profile</h3>
+    <p class="field">
+      <label for="profile-email">E-mail address</label>
+      <input class="text" id="profile-email" type="text" />
+    </p>
+    <p class="field">
+      <span><strong>Note:</strong> Your e-mail is currently only used for
+      logging in and for <a href="http://en.gravatar.com/">Gravatar support</a>.
+      It will never be shared with other parties, nor will it be sent
+      unsolicited e-mails.
+      </span>
+    </p>
+    <p class="field">
+      <label for="profile-name">Display name</label>
+      <input class="text" id="profile-name" maxlength="20" type="text" />
+    </p>
+    <p class="field"><button id="profile-update">Update profile</button></p>
+  </div>
+
   <div class="page" id="register-page">
     <div class="multifarce">
       <div class="info">
