Added function for creating links to users. Added the author to the frame information page and styled it.

--- a/app/app.html
+++ b/app/app.html
@@ -81,6 +81,7 @@
 
   <div class="page" id="frame-page">
     <h3 id="frame-title">Current Frame</h3>
+    <p class="author">by <a href="#" id="frame-author">Someone</a></p>
     <div class="text" id="frame-text">
       <p>This is the current frame.</p>
     </div>
