--- a/app/app.html
+++ b/app/app.html
@@ -55,6 +55,15 @@
     <div id="log"></div>
   </div>
 
+  <div class="page" id="command-page">
+    <h3 id="command-title">Current Command</h3>
+    <p class="author">by <a href="#" id="command-author">Someone</a></p>
+    <p id="command-frame">Can be used on <a href="#frames">Frame</a>.</p>
+    <p id="command-leads-to">Leads to <a href="#frames">Frame</a>.</p>
+    <h3>Text shown when command is used</h3>
+    <p id="command-text">This is the current command.</p>
+  </div>
+
   <div class="page" id="create-page">
     <h3>New command suggestions</h3>
     <p>Imagination dry? Maybe this list of commands can inspire you! It's a list
