Added a user details page.

--- a/app/app.html
+++ b/app/app.html
@@ -335,6 +335,24 @@
     </p>
     <p class="field"><button id="register-go">Sign me up!</button></p>
   </div>
+
+  <div class="page" id="user-page">
+    <p id="user-image"><img alt="" src="http://www.gravatar.com/avatar/?s=150&amp;d=identicon&amp;r=PG" width="150" height="150" /></p>
+    <h3 id="user-name">User</h3>
+    <p>You are viewing this user's profile.</p>
+
+    <h3>Frames</h3>
+    <p>Frames created by this user.</p>
+    <ul class="object-list" id="user-frames">
+      <li>Please stand by...</li>
+    </ul>
+
+    <h3>Commands</h3>
+    <p>Commands created by this user.</p>
+    <ul class="object-list" id="user-commands">
+      <li>Please stand by...</li>
+    </ul>
+  </div>
 </div>
 <div id="footer">
   <p>Open source: <a href="http://github.com/blixt/multifarce/">GitHub project
