--- a/app/app.html
+++ b/app/app.html
@@ -14,7 +14,7 @@
   <h1><a href="#">multifarce</a></h1>
   <div id="user">
     <a id="avatar" href="http://en.gravatar.com/" title="Change your avatar at Gravatar">
-      <img alt="Change your avatar at Gravatar" src="http://www.gravatar.com/avatar/?s=28&amp;d=identicon&amp;r=PG" width="28" height="28" />
+      <img alt="" src="http://www.gravatar.com/avatar/?s=28&amp;d=identicon&amp;r=PG" width="28" height="28" />
     </a>
     <span id="username">...</span>
     <ul id="actions">
